# opengl-learning

./: CMakeLists.txt  glad.c
src/: camera.cpp  coordinates.cpp  hello.cpp  shader.cpp  shader_interpolation.cpp  texture.cpp  transform.cpp  triangle.cpp  triangle_indexed.cpp
src/includes/: shader_s.h  utils.cpp  utils.h  values.h
